Uh oh, coderwall badges were wrapping. That's been fixed.

--- a/style.css
+++ b/style.css
@@ -4,15 +4,42 @@
 }
 
 body{
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: Verdana, Helvetica, Arial;
+  font-size: 95%;
   background: #111;
 }
 
+a{
+  color: #fff;
+  text-decoration: none;
+}
+
+h1{
+  padding: 0;
+  margin: 0;
+  font-size: 300%;
+  color: #fff;
+  text-align: center;
+}
+
+h2{
+  padding: 0;
+  margin: 0;
+  font-size: 150%;
+  text-align: center;
+}
+
+h2, h2 a{
+  color: #333;
+}
+
+
 #container{
   width: 900px;
-  margin: 70px auto;
+  margin: 0 auto;
 }
 
 #coderwall{
+  width: 810px;
   margin: 0 auto;
 }
